# axum-sqlx-demo

./: Cargo.toml  init.sql
src/: dao.rs  dto.rs  handlers.rs  main.rs  models.rs
