[package]
name = "axum-sqlx-demo"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.5.6", features = ["mysql", "runtime-tokio-rustls"] }
tokio = { version = "1.11.0", features = ["full"] }