[package]
name = "axum-sqlx-demo"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.5.6", features = ["mysql", "runtime-tokio-rustls"] }
tokio = { version = "1.11.0", features = ["full"] }
axum = { version = "0.2.3" }
serde = { version = "1.0", features = ["derive"] }
tower = { version = "0.4", features = ["util", "timeout"] }
tower-http = { version = "0.1", features = ["add-extension", "trace"] }